force-app/main/default/objects/eContacts__Receipts__c/eContacts__Receipts__c.object-meta.xml
<CustomObject>
    <label>Receipt</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Receipts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>