force-app/main/default/objects/eContacts__Receipts__c/fields/eContacts__Account__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>