force-app/main/default/objects/eContacts__Receipts__c/fields/eContacts__City__c.field-meta.xml
<CustomField>
    <fullName>eContacts__City__c</fullName>
    <label>City</label>
    <length>200</length>
    <type>Text</type>
</CustomField>