force-app/main/default/objects/eContacts__Receipts__c/fields/eContacts__Company__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Company__c</fullName>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>