force-app/main/default/objects/eContacts__Receipts__c/fields/eContacts__Contact__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>