force-app/main/default/objects/eContacts__Receipts__c/fields/eContacts__Country__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Country__c</fullName>
    <label>Country</label>
    <length>200</length>
    <type>Text</type>
</CustomField>