force-app/main/default/objects/eContacts__Receipts__c/fields/eContacts__Lead__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>