force-app/main/default/objects/eContacts__Receipts__c/fields/eContacts__Phone__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>