force-app/main/default/objects/eContacts__Receipts__c/fields/eContacts__Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Receipt_Date__c</fullName>
    <label>Receipt Date</label>
    <type>Date</type>
</CustomField>