force-app/main/default/objects/eContacts__Receipts__c/fields/eContacts__Receipt_Time__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Receipt_Time__c</fullName>
    <label>Receipt Time</label>
    <type>Time</type>
</CustomField>