force-app/main/default/objects/eContacts__Receipts__c/fields/eContacts__Street_Address_1__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Street_Address_1__c</fullName>
    <label>Street Address 1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>