force-app/main/default/objects/eContacts__Receipts__c/fields/eContacts__Subtotal__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Subtotal__c</fullName>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>