force-app/main/default/objects/eContacts__Receipts__c/fields/eContacts__Tax__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Tax__c</fullName>
    <label>Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>