force-app/main/default/objects/eContacts__Receipts__c/fields/eContacts__Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Zip_Postal_Code__c</fullName>
    <label>Zip / Postal Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>