force-app/main/default/objects/eContacts__Receipts__c/listViews/eContacts__All.listView-meta.xml
<ListView>
    <fullName>eContacts__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>